# Real-Estate-Recomendation-System

./: .coverage  .gitignore  01_EDA_and_Insights.ipynb  README.md  main.py  pyproject.toml  requirements.txt  submit_pipeline.sh  validate_submission.py
config/: paths.py  settings.py
scripts/: evaluate.py  evaluate_aligned.py  generate_cold_prefs.py  infer.py  inference.py  make_colab_nb.py  preprocess.py  run_gpu.sh  run_kaggle_submission.py  test_feature_flow.py  train.py  train_reranker.py  tune_hyperparams.py  tune_mo_weights.py
src/core/: base.py
src/data/: loader.py  pci_loader.py  preprocessor.py
src/eda/: round_01_data_profiling.py  round_02_schema_relations.py  round_03_distributions.py  round_04_user_behavior.py  round_05_listing_quality.py  round_06_forensics.py  round_07_purchased_temporal.py  round_09_health_baseline.py  round_10_recall_strategies.py  round_11_test_users_pageviews.py  round_12_pageview_optimization.py  round_13_cascade_config.py  round_14_intent_matching_basic.py  round_15_intent_matching_deep.py  round_16_adview_correlation.py  round_17_sequential_transitions.py  round_18_evaluate_all_candidates.py  round_19_pci_untapped.py  round_23_cold_start_ceiling.py
src/evaluation/: cross_validator.py  health_metrics.py  metrics.py
src/features/: base.py  feature_context.py  feature_engineer.py  interaction_matrix.py  item_features.py  user_features.py
src/models/: baseline.py  collaborative.py
src/pipeline/: data_forensics.py  inference_pipeline.py  training_pipeline.py
src/rules/: geo_rules.py  match_rules.py  (+3 more)
tests/: conftest.py
(+80 files in other folders)
