[project]
name = "real-estate-recomendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "implicit>=0.7.3",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
