[project]
name = "real-estate-recomendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "implicit>=0.7.3",
    "kaggle>=2.1.2",
    "lightgbm>=4.6.0",
    "numpy>=2.4.4",
    "nvidia-cublas-cu12>=12.9.2.10",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pydantic>=2.13.4",
    "rmm-cu12>=26.4.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["."]
